Main picture and files added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <header>
-        hello world
-    </header>
+    <head>
+        <title>Renee Hammons </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <link rel="stylesheet" type= "text/css" href="stylesheet_file1.css">
+        <script src="script1.js"></script>
+        <meta name="author" content= "Renee Hammons">
+        <meta name=”viewport” content=”width=device-width, initial-scale=1.0″>
+    </head>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class=".col-lg-1 col-md-3 col-sm-1 col-xs-1">  </div>
+                <div class="text-block">
+                    <h2> Renee Hammons </h2>
+                </div>
+        </div>  
+    </div>
+</body>
 </html>
+
+
+
