--- a/my-website/public/index.html
+++ b/my-website/public/index.html
@@ -7,7 +7,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <title>Renee's Website</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
